support Boost >= 1.54 only and use Boost.Lockfree
this patch adds the config option "--standalone-build" that disables
Boost integration (by defining `CPPA_STANDALONE_BUILD`) and uses
the Boost.Lockfree queue as job list if compiled with Boost support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -255,44 +255,33 @@ if (DISABLE_MEM_MANAGEMENT)
   add_definitions(-DCPPA_DISABLE_MEM_MANAGEMENT)
 endif (DISABLE_MEM_MANAGEMENT)
 
-if (DISABLE_CONTEXT_SWITCHING)
-  # explicitly disabled
-else (DISABLE_CONTEXT_SWITCHING)
-  find_package(Boost 1.51.0 COMPONENTS context)
+if (STANDALONE_BUILD)
+  add_definitions(-DCPPA_STANDALONE_BUILD)
+endif (STANDALONE_BUILD)
+
+if (STANDALONE_BUILD)
+  # explicitly disabled, don't include Boost
+else (STANDALONE_BUILD)
+  find_package(Boost 1.54.0 COMPONENTS system context coroutine)
   # without REQUIRED, find_package(Boost...) returns with Boost_FOUND=FALSE
   if (NOT Boost_FOUND)
     # disable implicitly
+    add_definitions(-DCPPA_STANDALONE_BUILD)
     set(DISABLE_CONTEXT_SWITCHING true)
   else (NOT Boost_FOUND)
-    if (${Boost_VERSION} LESS 105400)
-      set(LD_FLAGS ${LD_FLAGS} ${Boost_CONTEXT_LIBRARY})
-      # nothing to do in this case
-    else ()
-      # for boost >= 1.54, we need coroutines as well
-      message(STATUS "Detected Boost >= 1.54.0, check for coroutines & system")
-      find_package(Boost 1.51.0 COMPONENTS system context coroutine)
-      if (Boost_FOUND)
-        set(LD_FLAGS ${LD_FLAGS} ${Boost_COROUTINE_LIBRARY} ${Boost_CONTEXT_LIBRARY} ${Boost_SYSTEM_LIBRARY})
-      endif ()
-    endif ()
-    # check again, as second find_package might set this to false
-    if (Boost_FOUND)
-      # This hack fixes a problem when the linker search path is the same as
-      # the one provided by the compiler. In this case, CMake replaces the absolute
-      # path (e.g., /path/to/lib.so) with -l<lib>, which may cause it to pick up the wrong
-      # library. So when this replacement happens, we ensure that the right
-      # library gets picked by adding a -L directive for the affected libraries
-      # (which is just Boost Context here).
-      set(CMAKE_EXE_LINKER_FLAGS -L${Boost_LIBRARY_DIRS})
-      set(INCLUDE_DIRS ${INCLUDE_DIRS} ${Boost_INCLUDE_DIRS})
-      set(LD_DIRS ${LD_DIRS} ${Boost_LIBRARY_DIRS})
-      set(DISABLE_CONTEXT_SWITCHING false)
-    else ()
-      # disable implicitly
-      set(DISABLE_CONTEXT_SWITCHING true)
-    endif ()
+    set(LD_FLAGS ${LD_FLAGS} ${Boost_COROUTINE_LIBRARY} ${Boost_CONTEXT_LIBRARY} ${Boost_SYSTEM_LIBRARY})
+    # This hack fixes a problem when the linker search path is the same as
+    # the one provided by the compiler. In this case, CMake replaces the absolute
+    # path (e.g., /path/to/lib.so) with -l<lib>, which may cause it to pick up the wrong
+    # library. So when this replacement happens, we ensure that the right
+    # library gets picked by adding a -L directive for the affected libraries
+    # (which is just Boost Context here).
+    set(CMAKE_EXE_LINKER_FLAGS -L${Boost_LIBRARY_DIRS})
+    set(INCLUDE_DIRS ${INCLUDE_DIRS} ${Boost_INCLUDE_DIRS})
+    set(LD_DIRS ${LD_DIRS} ${Boost_LIBRARY_DIRS})
+    set(DISABLE_CONTEXT_SWITCHING false)
   endif (NOT Boost_FOUND)
-endif (DISABLE_CONTEXT_SWITCHING)
+endif (STANDALONE_BUILD)
 
 # set compiler flag when compiling w/o context-switching actors
 if (DISABLE_CONTEXT_SWITCHING)
