--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -51,9 +51,11 @@ if (NOT "${CAF_NO_PROTOBUF_EXAMPLES}" STREQUAL "yes")
   endif (PROTOBUF_FOUND)
 endif ()
 
-#find_package(CURL)
-#if (CURL_FOUND)
-#  add_executable(curl_fuse curl/curl_fuse.cpp)
-#  target_link_libraries(curl_fuse ${CMAKE_DL_LIBS} ${CAF_LIBRARY} ${PTHREAD_LIBRARIES} ${CURL_LIBRARY})
-#  add_dependencies(curl_fuse all_examples)
-#endif (CURL_FOUND)
+if (NOT "${CAF_NO_CURL_EXAMPLES}" STREQUAL "yes")
+  find_package(CURL)
+  if (CURL_FOUND)
+    add_executable(curl_fuse curl/curl_fuse.cpp)
+    target_link_libraries(curl_fuse ${CMAKE_DL_LIBS} ${CAF_LIBRARY} ${PTHREAD_LIBRARIES} ${CURL_LIBRARY})
+    add_dependencies(curl_fuse all_examples)
+  endif (CURL_FOUND)
+endif ()
