Reorganize main repository
Add nexus, probe-event, and benchmarks as submodules and cleaned up all CMake
build scripts.

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -14,8 +14,8 @@ endif ()
 macro(add name folder)
   add_executable(${name} ${folder}/${name}.cpp ${ARGN})
   target_link_libraries(${name}
-                        ${CMAKE_DL_LIBS}
-			${LIBCAF_LIBRARIES}
+                        ${LD_FLAGS}
+                        ${LIBCAF_LIBRARIES}
                         ${PTHREAD_LIBRARIES}
                         ${WSLIB})
   add_dependencies(${name} all_examples)
