--- a/unit_testing/CMakeLists.txt
+++ b/unit_testing/CMakeLists.txt
@@ -8,9 +8,8 @@ include_directories(${LIBCAF_INCLUDE_DIRS})
 macro(add_unit_test name)
   add_executable(test_${name} test_${name}.cpp test.cpp ${ARGN})
   target_link_libraries(test_${name}
-                        ${CMAKE_DL_LIBS}
-                        ${LIBCAF_CORE_LIBRARY}
-                        ${LIBCAF_IO_LIBRARY}
+                        ${LD_FLAGS}
+                        ${LIBCAF_LIBRARIES}
                         ${PTHREAD_LIBRARIES})
   add_test(${name} ${EXECUTABLE_OUTPUT_PATH}/test_${name})
   add_dependencies(test_${name} all_unit_tests)
