--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "probe"]
 	path = probe
 	url = https://github.com/actor-framework/probe.git
+[submodule "shell"]
+	path = shell
+	url = https://github.com/actor-framework/shell
